--- a/_data/proofdict/fuk101_Windows_$2.yml
+++ b/_data/proofdict/fuk101_Windows_$2.yml
@@ -1,5 +1,5 @@
 id: 01GD9R51PD4AK9WEJVV66R39S3
-description: 正しくは「Windows $2」です。
+description: 正しくは「Windows」、「Windows XX」です。
 expected: Windows $2
 patterns:
   - /windows( *)(\d*)/i
