--- a/_data/proofdict/sakura_no_rentalserver.yml
+++ b/_data/proofdict/sakura_no_rentalserver.yml
@@ -2,7 +2,7 @@ id: 01GDASWWWYMJCR6TPA474T13R7
 description: 正しくは「さくらのレンタルサーバー」です。
 expected: さくらのレンタルサーバ
 patterns:
-  - さくらのレンタルサーバー
+  - /さくらのレンタルサーバー/
 allows:
   - /サーバ/
 specs:
