--- a/_data/proofdict/editor.yml
+++ b/_data/proofdict/editor.yml
@@ -1,6 +1,6 @@
 id: 01GDABEMZ4EFZ9ESPCWMMCNGSJ
 description: 長音符号：原語に接尾辞「-er」、「-or」、「-ar」がある場合は、原則として長母音を使用します。（Microsoft日本語スタイルガイド）
-expected: エディタ
+expected: エディター
 patterns:
   - /エディタ(?!ー)/
 allows: []
