--- a/_data/proofdict/_azu_yueni.yml
+++ b/_data/proofdict/_azu_yueni.yml
@@ -2,8 +2,13 @@ id: 01BQ92YWWJE2XPX5CD4HF25YKB
 description: 漢字で書かず、ひらがなで書くと読みやすくなります
 expected: ゆえに
 patterns:
-  - 故に
-specs: []
+  - /(?<!事)故に/
+allows: []
+specs:
+  - from: 故に
+    to: ゆえに
+  - from: セキュリティ事故に
+    to: セキュリティ事故に
 tags:
   - opinion
   - 表記統一
